--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,12 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-graph-vis": "^1.0.7",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "reagraph": "^4.7.0",
     "tailwindcss": "^3.2.7",
+    "vis-data": "^7.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
